--- a/Project/ArabicHTML/Packages(Arabic).html
+++ b/Project/ArabicHTML/Packages(Arabic).html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="/CSS/NavBar.css">
     <link rel="stylesheet" href="/CSS/Cards.css">
     <link rel="stylesheet" href="/CSS/Footer.css">
+    <link rel="stylesheet" href="/CSS/NavBar(Arabic).css">
     <link rel="stylesheet" href="/CSS/Packages.css">
+    <link rel="stylesheet" href="/CSS/Packages(Arabic).css">
 </head>
 <body>
-    <!-- NavBar including the Background -->
+  <!-- NavBar including the Background -->
     <!-- The effect on the video -->
     <section id="Main" class="darker">
       <!-- Container (NavBar-Video) -->
@@ -25,7 +27,7 @@
         <nav class="NavBar">
           <!-- Logo Div -->
           <div class="logo_div">
-            <a href="/HTML/Home.html">
+            <a href="/HTML/Home(Arabic).html">
               <!-- Logo -->
               <img id="logo" src="/IMAGES/Logo4.png" alt="الشعار" width="110px" />
             </a>
@@ -38,21 +40,21 @@
           <!-- NavBar Content -->
           <div class="NavContent">
             <ul>
-              <!-- الصفحة الرئيسية -->
+              <!-- Home -->
               <li>
-                <a href="/HTML/Home(English).html"><b>الصفحة الرئيسية</b></a>
+                <a href="/HTML/Home(Arabic).html"><b>الرئيسية</b></a>
               </li>
-              <!-- التوصيات -->
+              <!-- Recommendation -->
               <li>
-                <a href="/HTML/Home(English).html#recommendations"><b>التوصيات</b></a>
+                <a href="#recommendations"><b>التوصيات</b></a>
               </li>
-              <!-- الباقات -->
+              <!-- Packages -->
               <li>
-                <a href="/HTML/Packages(English).html"><b>الباقات</b></a>
+                <a href="/HTML/Packages(Arabic).html"><b>الحزم</b></a>
               </li>
             </ul>
           </div>
-          <a href="/HTML/Home(Arabic).html" class="LangChange">
+          <a href="/HTML/Packages(English).html" class="LangChange">
             <img src="/IMAGES/Langbtn.svg" alt="زر تغيير اللغة">
             <p><b>EN</b></p>
           </a>
@@ -60,8 +62,9 @@
       </section>
       <!-- Heading -->
       <div class="headings_div">
-        <h1 id="header0" class="header">الباقات لتجعل أفضل أوقاتك</h1>
-        <h1 id="header1" class="header">في الرياض</h1>
+        <h1 id="header0" class="header">بعض الحزم</h1>
+        <h1 id="header1" class="header"> لجعل فترة قضاءك</h1>
+        <h1 id="header2" class="header">في الرياض أجمل</h1>
       </div>
       <!-- Heading Button -->
       <!-- Button Container -->
@@ -74,15 +77,19 @@
         </button>
       </div>
     </section>
+
+    
     <section class="hr_con">
       <div class="hr"></div>
     </section>
+
+
       <!-- Cards Section -->
     <section class="cards_con">
       <!-- Header -->
       <div class="headerBorder">
         <div class="header_con">
-          <h1>فعاليات بقيمة 200 ريال سعودي</h1>
+          <h1> فعاليات بقيمة <h1>&nbsp٢٠٠ </h1>﷼</h1>
         </div>
       </div>
       <!-- Cards Container -->
@@ -97,7 +104,7 @@
                 <div class="contentView">
                   <!-- Header -->
                     <div class="opacityHeader">
-                        <h1>سطر النار</h1>
+                        <h1>مسار النار</h1>
                     </div>
                     <!-- Divder Border -->
                     <div class="borderBtm">
@@ -111,7 +118,7 @@
                     </div>
                     <!-- Button -->
                     <div class="btn_div1">
-                      <button onclick="window.location.href = 'https://webook.com/en/experiences/line-of-fire'"><b>حجز التذاكر (120 ريال سعودي)</b></button>
+                      <button onclick="window.location.href = 'https://webook.com/en/experiences/line-of-fire'"><b>حجز التذاكر (120 ريال )</b></button>
                     </div>
                 </div>
             </div>
@@ -120,7 +127,7 @@
         <!-- Second card -->
         <div class="cards">
             <!-- Card Image -->
-            <div class="cards_background">
+            <div id="Card2" class="cards_background">
                 <!-- Card Dark Background -->
                 <div class="opacity"></div>
                 <!-- Card content -->
@@ -136,12 +143,12 @@
                     <!-- Paragraph -->
                     <div class="opacity_par">
                         <p>
-                          يقع في الحي الدبلوماسي، هذا المنطقة تقدم تجربة تسوق وتناول طعام فاخرة.
+                          يقع في الحي الدبلوماسي، هذا المنطقة تقدم تجربة تسوق .
                         </p>
                     </div>
                     <!-- Button -->
                     <div class="btn_div1">
-                      <button onclick="window.location.href = 'https://webook.com/en/experiences/laser-tag'"><b>حجز التذاكر (100 ريال سعودي)</b></button>
+                      <button onclick="window.location.href = 'https://webook.com/en/experiences/laser-tag'"><b>حجز التذاكر (100 ريال )</b></button>
                     </div>
                 </div>
             </div>
@@ -149,7 +156,7 @@
         <!-- Third card -->
         <div class="cards">
             <!-- Card Image -->
-            <div class="cards_background">
+            <div id="Card3" class="cards_background">
                 <!-- Card Dark Background -->
                 <div class="opacity"></div>
                 <!-- Card content -->
@@ -171,7 +178,7 @@
                     </div>
                     <!-- Button -->
                     <div class="btn_div1">
-                      <button onclick="window.location.href = 'https://webook.com/en/events/tickets-anghami-john-achkar'"><b>حجز التذاكر (200 ريال سعودي)</b></button>
+                      <button onclick="window.location.href = 'https://webook.com/en/events/tickets-anghami-john-achkar'"><b>حجز التذاكر (200 ريال )</b></button>
                     </div>
                 </div>
             </div>
@@ -179,7 +186,7 @@
         <!-- Fourth card -->
         <div class="cards">
             <!-- Card Image -->
-            <div class="cards_background">
+            <div id="Card4" class="cards_background">
                 <!-- Card Dark Background -->
                 <div class="opacity"></div>
                 <!-- Card Content -->
@@ -195,12 +202,12 @@
                     <!-- Paragraph -->
                     <div class="opacity_par">
                         <p>
-                            ليلة من الإيقاعات الشعبية والأغاني الموسيقية الشعرية مع الفنان خالد ونواف.
+                            ليلة من الإيقاعات الشعبية والأغاني الموسيقية الشعرية مع الفنانين .
                         </p>
                     </div>
                     <!-- Button -->
                     <div class="btn_div1">
-                        <button onclick="window.location.href = 'https://webook.com/en/events/khaled-abdulrahman-and-nawwaf-al-jabarti-concert-tickets'"><b>حجز التذاكر (195 ريال سعودي)</b></button>
+                        <button onclick="window.location.href = 'https://webook.com/en/events/khaled-abdulrahman-and-nawwaf-al-jabarti-concert-tickets'"><b>حجز التذاكر (195 ريال )</b></button>
                     </div>
                 </div>
             </div>
@@ -225,7 +232,7 @@
             <!-- First card -->
             <div class="cards">
                 <!-- Card Image -->
-                <div class="cards_background">
+                <div id="Card6" class="cards_background">
                     <!-- Card Dark Background -->
                     <div class="opacity"></div>
                     <!-- Card content -->
@@ -246,7 +253,7 @@
                         </div>
                         <!-- Button -->
                         <div class="btn_div1">
-                            <button onclick="window.location.href = 'https://webook.com/en/experiences/thuray-dining-tickets-ramadan-season-riyadh'"><b>حجز التذاكر (50 ريال سعودي)</b></button>
+                            <button onclick="window.location.href = 'https://webook.com/en/experiences/thuray-dining-tickets-ramadan-season-riyadh'"><b>حجز التذاكر (50 ريال )</b></button>
                         </div>
                     </div>
                 </div>
@@ -255,7 +262,7 @@
             <!-- Second card -->
             <div class="cards">
                 <!-- Card Image -->
-                <div class="cards_background">
+                <div id="Cards5" class="cards_background">
                     <!-- Card Dark Background -->
                     <div class="opacity"></div>
                     <!-- Card content -->
@@ -276,7 +283,7 @@
                         </div>
                         <!-- Button -->
                         <div class="btn_div1">
-                            <button onclick="window.location.href = 'https://webook.com/en/experiences/al-thuraya-dining-riyadh-sohour'"><b>حجز التذاكر (50 ريال سعودي)</b></button>
+                            <button onclick="window.location.href = 'https://webook.com/en/experiences/al-thuraya-dining-riyadh-sohour'"><b>حجز التذاكر (50 ريال )</b></button>
                         </div>
                     </div>
                 </div>
@@ -301,7 +308,7 @@
                 <!-- First card -->
                 <div class="cards">
                     <!-- Card Image -->
-                    <div class="cards_background">
+                    <div id="Card8" class="cards_background">
                         <!-- Card Dark Background -->
                         <div class="opacity"></div>
                         <!-- Card content -->
@@ -317,77 +324,77 @@
                             <!-- Paragraph -->
                             <div class="opacity_par">
                                 <p>
-                                    منطقة مخصصة للأطفال من سن 3-12 سنة، بما في ذلك مجموعة من الأنشطة التفاعلية.
+                                    منطقة مخصصة للأطفال من سن 3-12 سنة، بما في ذلك انشطة.   
                                 </p>
                             </div>
                             <!-- Button -->
                             <div class="btn_div1">
-                                <button onclick="window.location.href = 'https://webook.com/en/experiences/kid-square-tickets-ramadan-season-riyadh-1'"><b>حجز التذاكر (120 ريال سعودي)</b></button>
+                                <button onclick="window.location.href = 'https://webook.com/en/experiences/kid-square-tickets-ramadan-season-riyadh-1'"><b>حجز التذاكر (120 ريال )</b></button>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Second card -->
-                <div class="cards">
-                    <!-- Card Image -->
-                    <div class="cards_background">
-                        <!-- Card Dark Background -->
-                        <div class="opacity"></div>
-                        <!-- Card content -->
-                        <div class="contentView">
-                            <!-- Header -->
-                            <div class="opacityHeader">
-                                <h1>موعد لعب كوكوميلون</h1>
-                            </div>
-                            <!-- Divder Border -->
-                            <div class="borderBtm">
-                                <div></
-<!-- Divder Border -->
-<div class="borderBtm">
-    <div></div>
-</div>
-<!-- Paragraph -->
-<div class="opacity_par">
-    <p>
-        تقدم فرصة فريدة للأطفال والعائلات للتفاعل مع شخصياتهم المفضلة.
-    </p>
-</div>
-<!-- Button -->
-<div class="btn_div1">
-    <button onclick="window.location.href = 'https://webook.com/en/experiences/al-thuraya-dining-riyadh-sohour'"><b>حجز التذاكر (160 ريال سعودي)</b></button>
-</div>
-</div>
-</div>
+    <!-- Second card -->
+                                <!-- First card -->
+                                <div class="cards">
+                                  <!-- Card Image -->
+                                  <div id="Card9" class="cards_background">
+                                      <!-- Card Dark Background -->
+                                      <div class="opacity"></div>
+                                      <!-- Card content -->
+                                      <div class="contentView">
+                                          <!-- Header -->
+                                          <div class="opacityHeader">
+                                              <h1>ساحة الأطفال</h1>
+                                          </div>
+                                          <!-- Divder Border -->
+                                          <div class="borderBtm">
+                                              <div></div>
+                                          </div>
+                                          <!-- Paragraph -->
+                                          <div class="opacity_par">
+                                              <p>
+                                                  منطقة مخصصة للأطفال من سن 3-12 سنة، بما في ذلك انشطة.   
+                                              </p>
+                                          </div>
+                                          <!-- Button -->
+                                          <div class="btn_div1">
+                                              <button onclick="window.location.href = 'https://webook.com/en/experiences/kid-square-tickets-ramadan-season-riyadh-1'"><b>حجز التذاكر (120 ريال )</b></button>
+                                          </div>
+                                      </div>
+                                  </div>
+                              </div>
 <!-- Third card -->
-<div class="cards">
-    <!-- Card Image -->
-    <div id="Card9" class="cards_background">
-        <!-- Card Dark Background -->
-        <div class="opacity"></div>
-        <!-- Content -->
-        <div class="contentView">
-            <!-- Header -->
-            <div class="opacityHeader">
-                <h1>منارة للفن</h1>
-            </div>
-            <!-- Divder Border -->
-            <div class="borderBtm">
-                <div></div>
-            </div>
-            <!-- Paragraph -->
-            <div class="opacity_par">
-                <p>
-                    ورش عمل فنية تفاعلية تمزج بين الفنون والحرف اليدوية، تعكس جوانب من الثقافة السعودية.
-                </p>
-            </div>
-            <!-- Button -->
-            <div class="btn_div1">
-                <button onclick="window.location.href = 'https://webook.com/en/experiences/workshps-manara-art-tickets-ramadan-season-riyadh-1'"><b>حجز التذاكر (120 ريال سعودي)</b></button>
-            </div>
-        </div>
-    </div>
-</div>
+                <!-- First card -->
+                <div class="cards">
+                  <!-- Card Image -->
+                  <div id="Card7" class="cards_background">
+                      <!-- Card Dark Background -->
+                      <div class="opacity"></div>
+                      <!-- Card content -->
+                      <div class="contentView">
+                          <!-- Header -->
+                          <div class="opacityHeader">
+                              <h1>ساحة الأطفال</h1>
+                          </div>
+                          <!-- Divder Border -->
+                          <div class="borderBtm">
+                              <div></div>
+                          </div>
+                          <!-- Paragraph -->
+                          <div class="opacity_par">
+                              <p>
+                                  منطقة مخصصة للأطفال من سن 3-12 سنة، بما في ذلك انشطة.   
+                              </p>
+                          </div>
+                          <!-- Button -->
+                          <div class="btn_div1">
+                              <button onclick="window.location.href = 'https://webook.com/en/experiences/kid-square-tickets-ramadan-season-riyadh-1'"><b>حجز التذاكر (120 ريال )</b></button>
+                          </div>
+                      </div>
+                  </div>
+              </div>
 </section>
     <!-- Footer -->
     <footer>
@@ -471,8 +478,8 @@
             <a href="#Main">
               <p>الرئيسية</p>
             </a>
-            <a href="##">
-              <p>النشرة الإخبارية</p>
+            <a href="/HTML/Packages(Arabic).html">
+              <p>الحزم</p>
             </a>
             <a href="##">
               <p>سياسة الخصوصية</p>
