--- a/Project/ArabicHTML/Home(Arabic).html
+++ b/Project/ArabicHTML/Home(Arabic).html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>الرئيسية</title>
     <!-- Css Links -->
     <link rel="stylesheet" href="/CSS/NavBar.css" />
     <link rel="stylesheet" href="/CSS/About.css" />
     <link rel="stylesheet" href="/CSS/Cards.css" />
     <link rel="stylesheet" href="/CSS/Footer.css">
-    <link rel="stylesheet" href="/CSS/Responsive.css">
+    <link rel="stylesheet" href="/CSS/HomeArabic.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins"rel="stylesheet"/>
   </head>
   <body>
@@ -31,44 +31,44 @@
         <nav class="NavBar">
           <!-- Logo Div -->
           <div class="logo_div">
-            <a href="/HTML/Home.html">
+            <a href="/HTML/Home(Arabic).html">
               <!-- Logo -->
-              <img id="logo" src="/IMAGES/Logo4.png" alt="Logo" width="110px" />
+              <img id="logo" src="/IMAGES/Logo4.png" alt="الشعار" width="110px" />
             </a>
           </div>
           <!-- Search Bar Div-->
           <div class="search_div">
             <!-- Search Bar -->
-            <input class="searchbar" type="search" placeholder="Search" />
+            <input class="searchbar" type="search" placeholder="البحث" />
           </div>
           <!-- NavBar Content -->
           <div class="NavContent">
             <ul>
               <!-- Home -->
               <li>
-                <a href="/HTML/Home(English).html"><b>Home</b></a>
+                <a href="/HTML/Home(Arabic).html"><b>الرئيسية</b></a>
               </li>
               <!-- Recommendation -->
               <li>
-                <a href="#recommendations"><b>Recommendations</b></a>
+                <a href="#recommendations"><b>التوصيات</b></a>
               </li>
               <!-- Packages -->
               <li>
-                <a href="/HTML/Packages(English).html"><b>Packages</b></a>
+                <a href="/HTML/Packages(Arabic).html"><b>الحزم</b></a>
               </li>
             </ul>
           </div>
-          <a href="/HTML/Home(Arabic).html" class="LangChange">
-            <img src="/IMAGES/Langbtn.svg" alt="Language Changing Button">
-            <p><b>AR</b></p>
+          <a href="/HTML/Home(English).html" class="LangChange">
+            <img src="/IMAGES/Langbtn.svg" alt="زر تغيير اللغة">
+            <p><b>EN</b></p>
           </a>
         </nav>
       </section>
       <!-- Heading -->
       <div class="headings_div">
-        <h1 id="header0" class="header">Your Essential</h1>
-        <h1 id="header1" class="header">Riyadh Season</h1>
-        <h1 id="header2" class="header">GuideLine In 2024</h1>
+        <h1 id="header0" class="header">دليلك الأساسي</h1>
+        <h1 id="header1" class="header"> لموسم الرياض</h1>
+        <h1 id="header2" class="header">في عام 2024</h1>
       </div>
       <!-- Heading Button -->
       <!-- Button Container -->
@@ -76,20 +76,20 @@
         <!-- Button -->
         <button onclick="location.href='#about3'" class="btn">
             <span>
-              <b>Explore -</b>
+              <b>استكشاف -</b>
             </span>
         </button>
       </div>
     </section>
-    <!-- Seconed Section (About Riyadh Season) -->
+    <!-- Second Section (About Riyadh Season) -->
     <!-- Section Container -->
     <section id="about3" class="two_sec">
       <!-- About Riyadh Container -->
       <div class="span_con">
         <div class="spaner">
-          <h1 id="span1" class="span0">About Riyadh</h1>
+          <h1 id="span1" class="span0">عن الرياض</h1>
           <div class="span_con1">
-            <h1 id="span2" class="span0">Season</h1>
+            <h1 id="span2" class="span0">موسم</h1>
           </div>
         </div>
       </div>
@@ -100,7 +100,7 @@
         class="img01"
         src="/IMAGES/Festivals1.jpg"
         width="400px"
-        alt="RS Festival"
+        alt="مهرجانات موسم الرياض"
       />
       <!-- image2 -->
       <img
@@ -108,30 +108,29 @@
         class="img01"
         src="/IMAGES/Festivals2.jpg"
         width="400px"
-        alt="RS Festival"
+        alt="مهرجانات موسم الرياض"
       />
       <!-- Paragraph Container -->
       <div class="parDiv">
         <!-- Paragraphes -->
         <p id="par1" class="par">
-          Riyadh Season is one of the world’s largest winter
+          موسم الرياض هو واحد من أكبر الفعاليات الترفيهية الشتوية في العالم
         </p>
         <p id="par2" class="par">
-          entertainment event. Variety of food from around
+          تنوع الطعام من جميع أنحاء العالم، بفضل المطاعم الحصرية بالإضافة إلى
         </p>
         <p id="par3" class="par">
-          the world, courtesy of exclusive restaurants plus
+          العديد من المفاجآت المثيرة. تجسد الاحتفالات
         </p>
         <p id="par4" class="par">
-          countless exciting surprises. The festivities capture
+          جوهر المملكة العربية السعودية، من تراثها النجدي إلى
         </p>
         <p id="par5" class="par">
-          the essence of Saudi, from its Najdi heritage to its
+          ديناميتها في الوقت الحالي.
         </p>
-        <p id="par6" class="par">present day dynamism.</p>
       </div>
     </section>
-    <!-- The Divder Between The 2 Sections -->
+    <!-- The Divider Between The 2 Sections -->
     <section class="hr_con">
       <div class="hr"></div>
     </section>
@@ -139,7 +138,7 @@
     <section id="recommendations" class="cards_con">
       <!-- Header -->
       <div class="header_con">
-        <h1>Recommended Places</h1>
+        <h1>الأماكن الموصى بها</h1>
       </div>
       <!-- Cards Container -->
       <section class="cards_div">
@@ -153,22 +152,22 @@
                 <div class="contentView">
                   <!-- Header -->
                     <div class="opacityHeader">
-                        <h1>Roshn Front</h1>
+                        <h1>واجهة روشن</h1>
                     </div>
-                    <!-- Divder Border -->
+                    <!-- Divider Border -->
                     <div class="borderBtm">
                         <div></div>
                     </div>
                     <!-- Paragraph -->
                     <div class="opacity_par">
                         <p>
-                            Witness innovative design, which reimagines the future <br> of the
-                            workplace.
+                            شاهد التصميم المبتكر، الذي يعي
+                            يتخيل مستقبل مكان العمل.
                         </p>
                     </div>
                     <!-- Button -->
-                    <div class="btn_div1">
-                      <button onclick="window.location.href = 'https://roshnfront.sa/'"><b>Discover</b></button>
+                    <div id="btn_div2" class="btn_div1">
+                      <button onclick="window.location.href = 'https://roshnfront.sa/'"><b>اكتشف</b></button>
                     </div>
                 </div>
             </div>
@@ -185,22 +184,21 @@
                 <div class="contentView">
                                     <!-- Header -->
                     <div class="opacityHeader">
-                        <h1>The Groves</h1>
+                        <h1>ذا قروفز</h1>
                     </div>
-                    <!-- Divder Border -->
+                    <!-- Divider Border -->
                     <div class="borderBtm">
                         <div></div>
                     </div>
                     <!-- Paragraph -->
                     <div class="opacity_par">
                         <p>
-                          Located in the Diplomatic Quarter, this zone offers luxury
-                          shopping and dining.
+                          تقع في الحي الدبلوماسي، تقدم هذه المنطقة التسوق والتناول الفاخر.
                         </p>
                     </div>
                     <!-- Button -->
                     <div class="btn_div1">
-                      <button onclick="window.location.href = 'https://www.thegroves-sa.com/'"><b>Discover</b></button>
+                      <button onclick="window.location.href = 'https://www.thegroves-sa.com/'"><b>اكتشف</b></button>
                     </div>
                 </div>
             </div>
@@ -214,22 +212,21 @@
               <div class="contentView">
                 <!-- Header -->
                   <div class="opacityHeader">
-                      <h1>Kingdom Arena</h1>
+                      <h1>ملعب المملكة</h1>
                   </div>
-                  <!-- Divde Border -->
+                  <!-- Divider Border -->
                   <div class="borderBtm">
                       <div></div>
                   </div>
                   <!-- Paragraph -->
                   <div class="opacity_par">
                       <p>
-                        Able to accommodate more than 40,000 people, this venue hosts
-                        concerts and more!
+                        قادر على استيعاب أكثر من 40،000 شخص، يستضيف هذا المكان الحفلات وأكثر!
                       </p>
                   </div>
                   <!-- Button -->
                   <div class="btn_div1">
-                    <button onclick="window.location.href = 'https://kingdomarena-sa.com/'"><b>Discover</b></button>
+                    <button onclick="window.location.href = 'https://kingdomarena-sa.com/'"><b>اكتشف</b></button>
                   </div>
               </div>
           </div>
@@ -244,22 +241,22 @@
             <div class="contentView">
                 <div class="opacityHeader">
                   <!-- Header -->
-                    <h1>Ramla Terraza</h1>
+                    <h1>راملا تيرازا</h1>
                 </div>
-                <!-- Divder Border -->
+                <!-- Divider Border -->
                 <div class="borderBtm">
                     <div></div>
                 </div>
                 <!-- Paragraph -->
                 <div class="opacity_par">
                     <p>
-                      Please your palate at Clap, Iris Café, Brute or Jones the Grocer
-                      — all offer upscale eats.
+                      من فضلك طعم الطعام لدينا في كلاب، كافيه إيريس، بروت أو جونز ذا جروسر
+                      — كلها تقدم وجبات فاخرة.
                     </p>
                 </div>
                 <!-- Button -->
                 <div class="btn_div1">
-                  <button onclick="window.location.href = 'https://welcomesaudi.com/activity/ramla-terraza-riyadh'"><b>Discover</b></button>
+                  <button onclick="window.location.href = 'https://welcomesaudi.com/activity/ramla-terraza-riyadh'"><b>اكتشف</b></button>
                 </div>
             </div>
         </div>
@@ -268,20 +265,19 @@
     <!-- Fourth Section Picture -->
     <section class="imgBigCon">
       <div class="imgCon">
-        <img src="/IMAGES/Roshn1.jpg" width="900px" alt="RoshnFront">
+        <img src="/IMAGES/Roshn1.jpg" width="900px" alt="روشن فرونت">
         <div class="backgroundimg">
           <div class="HeaderImg">
-            <h1>Roshn Front</h1>
+            <h1>واجهة روشن</h1>
             <section id="hr2" class="hr_con">
               <div class="hr"></div>
             </section>
           </div>
           <div class="PImg">
-            <p>As a part of its efforts to bring a new way of integrated living to the Kingdom,
-              ROSHN has expanded its footprint in Riyadh by acquiring the ROSHN Front shopping and business area, located adjacent to ROSHN’s flagship development,
-              SEDRA. The acquisition enables ROSHN to become a multi-asset class real estate developer and manager of global significance.
-              An extraordinary urban experience that reimagines how we work, play, dine, shop,
-              and share space in the north of Riyadh. Integrating human-centered design and social spaces, ROSHN Front isn't just a place - it's a living hub of connection, curiosity and innovation.
+            <p>كجزء من جهودها لجلب طريقة جديدة للعيش المتكاملة إلى المملكة،
+              قامت روشن بتوسيع نطاقها في الرياض من خلال استحواذها على منطقة التسوق والأعمال روشن فرونت، الموجودة بالقرب من مشروع روشن الرئيسي،
+              سدرة. يتيح الاستحواذ لروشن أن تصبح مطورًا عقاريًا متعدد الأصول ومديرًا لعقارات عالمية المستوى.
+              تجربة حضرية استثنائية تعيد تصور كيف نعمل ونلعب ونتناول الطعام ونتسوق ونتشارك الفضاء في شمال الرياض. من خلال تكامل التصميم الموجه نحو الإنسان والمساحات الاجتماعية، لا تعتبر روشن فرونت مجرد مكان - إنها محور حي للاتصال والفضول والابتكار.
             </p>
           </div>
         </div>
@@ -294,91 +290,93 @@
       <!-- Icons -->
       <div class="icons">
         <div class="emailcon">
-        <img src="/IMAGES/email.svg" alt="Email Icon" width="50px">
+        <img src="/IMAGES/email.svg" alt="رمز البريد الإلكتروني" width="50px">
         <span>RiyadhGuidline@gov.sa</span>
       </div>
       <div class="emailcon">
-        <img src="/IMAGES/Tele.svg" alt="Telephone Icon" width="50px">
+        <img src="/IMAGES/Tele.svg" alt="رمز الهاتف" width="50px">
         <span>+966 11 123 4567</span>
       </div>
       </div>
       <!-- Advising Form -->
-        <div class="test">
-          <div id="left" class="else">
-            <div class="formBorder">
-              <h1>For individual Advising</h1>
-              <div class="form">
-                <form>
-                  <input placeholder="FirstName" type="text" required>
-                  <input class="left" placeholder="LastName" type="text" required>
-                  <input class="btm" placeholder="Email" type="email" required>
-                  <input class="btm" id="btm1" placeholder="Phone" type="tel" required>
-                <div class="msgCon">
-                  <input placeholder="Additional Massage" id="msg" type="text">
+        <div class="
+        test">
+        <div id="left" class="else">
+          <div class="formBorder">
+            <h1>للتوجيه الفردي</h1>
+            <div class="form">
+              <form>
+                <div class="namediv">
+                    <input placeholder="الاسم الأول" type="text" required>
+                    <input class="left" placeholder="الاسم الأخير" type="text" required>
                 </div>
-                <div class="submitdiv">
-                  <input class="submit" type="submit" value="Submit">
+                <div class="emaildiv">
+                    <input class="btm" placeholder="البريد الإلكتروني" type="email" required>
+                    <input class="btm" id="btm1" placeholder="الهاتف" type="tel" required>
                 </div>
-                </form>
+              <div class="msgCon">
+                <input placeholder="رسالة إضافية" id="msg" type="text">
               </div>
+              <div class="submitdiv">
+                <input class="submit" type="submit" value="إرسال">
+              </div>
+              </form>
             </div>
           </div>
-          <!-- Footer Content -->
-        <div id="right" class="else">
-          <div class="aboutFooter">
-            <a href="##">
-              <h3>About</h3>
-            </a>
-            <a href="##">
-              <p>Our Story</p>
-            </a>
-            <a href="##">
-              <p>Awards</p>
-            </a>
-            <a href="##">
-              <p>Our Team</p>
-            </a>
-            <a href="##">
-              <p>Career</p>
-            </a>
-          </div>
-          <div class="aboutFooter">
-            <a href="##">
-              <h3>Company</h3>
-            </a>
-            <a href="##">
-              <p>Our Services</p>
-            </a>
-            <a href="##">
-              <p>Clients</p>
-            </a>
-            <a href="##">
-              <p>Contact</p>
-            </a>
-            <a href="##">
-              <p>Press</p>
-            </a>
-          </div>
-          <div class="aboutFooter">
-            <a href="##">
-              <h3>Resources</h3>
-            </a>
-            <a href="#Main">
-              <p>Home</p>
-            </a>
-            <a href="##">
-              <p>Newsletter</p>
-            </a>
-            <a href="##">
-              <p>Privacy Policy</p>
-            </a>
-            <a href="##">
-              <p>Career</p>
-            </a>
-          </div>
         </div>
+        <!-- Footer Content -->
+      <div id="right" class="else">
+        <div class="aboutFooter">
+          <a href="##">
+            <h3>حول</h3>
+          </a>
+          <a href="##">
+            <p>قصتنا</p>
+          </a>
+          <a href="##">
+            <p>الجوائز</p>
+          </a>
+          <a href="##">
+            <p>فريقنا</p>
+          </a>
+          <a href="##">
+            <p>الوظائف</p>
+          </a>
         </div>
-        <p class="copyright">&copy; All rights reserved to Riyadh Season GuideLine Oraganization</p>
-    </footer>
-  </body>
+        <div class="aboutFooter">
+          <a href="##">
+            <h3>الشركة</h3>
+          </a>
+          <a href="##">
+            <p>خدماتنا</p>
+          </a>
+          <a href="##">
+            <p>العملاء</p>
+          </a>
+          <a href="##">
+            <p>اتصال</p>
+          </a>
+          <a href="##">
+            <p>الصحافة</p>
+          </a>
+        </div>
+        <div class="aboutFooter">
+          <a href="##">
+            <h3>الموارد</h3>
+          </a>
+          <a href="#Main">
+            <p>الرئيسية</p>
+          </a>
+          <a href="/HTML/Packages(Arabic).html">
+            <p>الحزم</p>
+          </a>
+          <a href="##">
+            <p>سياسة الخصوصية</p>
+          </a>
+        </div>
+      </div>
+      </div>
+      <p class="copyright">&copy; جميع الحقوق محفوظه لمؤسسة دليل موسم الرياض 2024</p>
+  </footer>
+</body>
 </html>
