--- a/Project/EnglishHTML/Home(English).html
+++ b/Project/EnglishHTML/Home(English).html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>الرئيسية</title>
+    <title>Home</title>
     <!-- Css Links -->
     <link rel="stylesheet" href="/CSS/NavBar.css" />
     <link rel="stylesheet" href="/CSS/About.css" />
     <link rel="stylesheet" href="/CSS/Cards.css" />
     <link rel="stylesheet" href="/CSS/Footer.css">
-    <link rel="stylesheet" href="/CSS/HomeArabic.css">
+    <link rel="stylesheet" href="/CSS/Responsive.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins"rel="stylesheet"/>
   </head>
   <body>
@@ -31,44 +31,44 @@
         <nav class="NavBar">
           <!-- Logo Div -->
           <div class="logo_div">
-            <a href="/HTML/Home(Arabic).html">
+            <a href="/HTML/Home.html">
               <!-- Logo -->
-              <img id="logo" src="/IMAGES/Logo4.png" alt="الشعار" width="110px" />
+              <img id="logo" src="/IMAGES/Logo4.png" alt="Logo" width="110px" />
             </a>
           </div>
           <!-- Search Bar Div-->
           <div class="search_div">
             <!-- Search Bar -->
-            <input class="searchbar" type="search" placeholder="البحث" />
+            <input class="searchbar" type="search" placeholder="Search" />
           </div>
           <!-- NavBar Content -->
           <div class="NavContent">
             <ul>
               <!-- Home -->
               <li>
-                <a href="/HTML/Home(Arabic).html"><b>الرئيسية</b></a>
+                <a href="/HTML/Home(English).html"><b>Home</b></a>
               </li>
               <!-- Recommendation -->
               <li>
-                <a href="#recommendations"><b>التوصيات</b></a>
+                <a href="#recommendations"><b>Recommendations</b></a>
               </li>
               <!-- Packages -->
               <li>
-                <a href="/HTML/Packages(Arabic).html"><b>الحزم</b></a>
+                <a href="/HTML/Packages(English).html"><b>Packages</b></a>
               </li>
             </ul>
           </div>
-          <a href="/HTML/Home(English).html" class="LangChange">
-            <img src="/IMAGES/Langbtn.svg" alt="زر تغيير اللغة">
-            <p><b>EN</b></p>
+          <a href="/HTML/Home(Arabic).html" class="LangChange">
+            <img src="/IMAGES/Langbtn.svg" alt="Language Changing Button">
+            <p><b>AR</b></p>
           </a>
         </nav>
       </section>
       <!-- Heading -->
       <div class="headings_div">
-        <h1 id="header0" class="header">دليلك الأساسي</h1>
-        <h1 id="header1" class="header"> لموسم الرياض</h1>
-        <h1 id="header2" class="header">في عام 2024</h1>
+        <h1 id="header0" class="header">Your Essential</h1>
+        <h1 id="header1" class="header">Riyadh Season</h1>
+        <h1 id="header2" class="header">GuideLine In 2024</h1>
       </div>
       <!-- Heading Button -->
       <!-- Button Container -->
@@ -76,20 +76,20 @@
         <!-- Button -->
         <button onclick="location.href='#about3'" class="btn">
             <span>
-              <b>استكشاف -</b>
+              <b>Explore -</b>
             </span>
         </button>
       </div>
     </section>
-    <!-- Second Section (About Riyadh Season) -->
+    <!-- Seconed Section (About Riyadh Season) -->
     <!-- Section Container -->
     <section id="about3" class="two_sec">
       <!-- About Riyadh Container -->
       <div class="span_con">
         <div class="spaner">
-          <h1 id="span1" class="span0">عن الرياض</h1>
+          <h1 id="span1" class="span0">About Riyadh</h1>
           <div class="span_con1">
-            <h1 id="span2" class="span0">موسم</h1>
+            <h1 id="span2" class="span0">Season</h1>
           </div>
         </div>
       </div>
@@ -100,7 +100,7 @@
         class="img01"
         src="/IMAGES/Festivals1.jpg"
         width="400px"
-        alt="مهرجانات موسم الرياض"
+        alt="RS Festival"
       />
       <!-- image2 -->
       <img
@@ -108,29 +108,30 @@
         class="img01"
         src="/IMAGES/Festivals2.jpg"
         width="400px"
-        alt="مهرجانات موسم الرياض"
+        alt="RS Festival"
       />
       <!-- Paragraph Container -->
       <div class="parDiv">
         <!-- Paragraphes -->
         <p id="par1" class="par">
-          موسم الرياض هو واحد من أكبر الفعاليات الترفيهية الشتوية في العالم
+          Riyadh Season is one of the world’s largest winter
         </p>
         <p id="par2" class="par">
-          تنوع الطعام من جميع أنحاء العالم، بفضل المطاعم الحصرية بالإضافة إلى
+          entertainment event. Variety of food from around
         </p>
         <p id="par3" class="par">
-          العديد من المفاجآت المثيرة. تجسد الاحتفالات
+          the world, courtesy of exclusive restaurants plus
         </p>
         <p id="par4" class="par">
-          جوهر المملكة العربية السعودية، من تراثها النجدي إلى
+          countless exciting surprises. The festivities capture
         </p>
         <p id="par5" class="par">
-          ديناميتها في الوقت الحالي.
+          the essence of Saudi, from its Najdi heritage to its
         </p>
+        <p id="par6" class="par">present day dynamism.</p>
       </div>
     </section>
-    <!-- The Divider Between The 2 Sections -->
+    <!-- The Divder Between The 2 Sections -->
     <section class="hr_con">
       <div class="hr"></div>
     </section>
@@ -138,7 +139,7 @@
     <section id="recommendations" class="cards_con">
       <!-- Header -->
       <div class="header_con">
-        <h1>الأماكن الموصى بها</h1>
+        <h1>Recommended Places</h1>
       </div>
       <!-- Cards Container -->
       <section class="cards_div">
@@ -152,22 +153,22 @@
                 <div class="contentView">
                   <!-- Header -->
                     <div class="opacityHeader">
-                        <h1>واجهة روشن</h1>
+                        <h1>Roshn Front</h1>
                     </div>
-                    <!-- Divider Border -->
+                    <!-- Divder Border -->
                     <div class="borderBtm">
                         <div></div>
                     </div>
                     <!-- Paragraph -->
                     <div class="opacity_par">
                         <p>
-                            شاهد التصميم المبتكر، الذي يعي
-                            يتخيل مستقبل مكان العمل.
+                            Witness innovative design, which reimagines the future <br> of the
+                            workplace.
                         </p>
                     </div>
                     <!-- Button -->
-                    <div id="btn_div2" class="btn_div1">
-                      <button onclick="window.location.href = 'https://roshnfront.sa/'"><b>اكتشف</b></button>
+                    <div class="btn_div1">
+                      <button onclick="window.location.href = 'https://roshnfront.sa/'"><b>Discover</b></button>
                     </div>
                 </div>
             </div>
@@ -184,21 +185,22 @@
                 <div class="contentView">
                                     <!-- Header -->
                     <div class="opacityHeader">
-                        <h1>ذا قروفز</h1>
+                        <h1>The Groves</h1>
                     </div>
-                    <!-- Divider Border -->
+                    <!-- Divder Border -->
                     <div class="borderBtm">
                         <div></div>
                     </div>
                     <!-- Paragraph -->
                     <div class="opacity_par">
                         <p>
-                          تقع في الحي الدبلوماسي، تقدم هذه المنطقة التسوق والتناول الفاخر.
+                          Located in the Diplomatic Quarter, this zone offers luxury
+                          shopping and dining.
                         </p>
                     </div>
                     <!-- Button -->
                     <div class="btn_div1">
-                      <button onclick="window.location.href = 'https://www.thegroves-sa.com/'"><b>اكتشف</b></button>
+                      <button onclick="window.location.href = 'https://www.thegroves-sa.com/'"><b>Discover</b></button>
                     </div>
                 </div>
             </div>
@@ -212,21 +214,22 @@
               <div class="contentView">
                 <!-- Header -->
                   <div class="opacityHeader">
-                      <h1>ملعب المملكة</h1>
+                      <h1>Kingdom Arena</h1>
                   </div>
-                  <!-- Divider Border -->
+                  <!-- Divde Border -->
                   <div class="borderBtm">
                       <div></div>
                   </div>
                   <!-- Paragraph -->
                   <div class="opacity_par">
                       <p>
-                        قادر على استيعاب أكثر من 40،000 شخص، يستضيف هذا المكان الحفلات وأكثر!
+                        Able to accommodate more than 40,000 people, this venue hosts
+                        concerts and more!
                       </p>
                   </div>
                   <!-- Button -->
                   <div class="btn_div1">
-                    <button onclick="window.location.href = 'https://kingdomarena-sa.com/'"><b>اكتشف</b></button>
+                    <button onclick="window.location.href = 'https://kingdomarena-sa.com/'"><b>Discover</b></button>
                   </div>
               </div>
           </div>
@@ -241,22 +244,22 @@
             <div class="contentView">
                 <div class="opacityHeader">
                   <!-- Header -->
-                    <h1>راملا تيرازا</h1>
+                    <h1>Ramla Terraza</h1>
                 </div>
-                <!-- Divider Border -->
+                <!-- Divder Border -->
                 <div class="borderBtm">
                     <div></div>
                 </div>
                 <!-- Paragraph -->
                 <div class="opacity_par">
                     <p>
-                      من فضلك طعم الطعام لدينا في كلاب، كافيه إيريس، بروت أو جونز ذا جروسر
-                      — كلها تقدم وجبات فاخرة.
+                      Please your palate at Clap, Iris Café, Brute or Jones the Grocer
+                      — all offer upscale eats.
                     </p>
                 </div>
                 <!-- Button -->
                 <div class="btn_div1">
-                  <button onclick="window.location.href = 'https://welcomesaudi.com/activity/ramla-terraza-riyadh'"><b>اكتشف</b></button>
+                  <button onclick="window.location.href = 'https://welcomesaudi.com/activity/ramla-terraza-riyadh'"><b>Discover</b></button>
                 </div>
             </div>
         </div>
@@ -265,19 +268,20 @@
     <!-- Fourth Section Picture -->
     <section class="imgBigCon">
       <div class="imgCon">
-        <img src="/IMAGES/Roshn1.jpg" width="900px" alt="روشن فرونت">
+        <img src="/IMAGES/Roshn1.jpg" width="900px" alt="RoshnFront">
         <div class="backgroundimg">
           <div class="HeaderImg">
-            <h1>واجهة روشن</h1>
+            <h1>Roshn Front</h1>
             <section id="hr2" class="hr_con">
               <div class="hr"></div>
             </section>
           </div>
           <div class="PImg">
-            <p>كجزء من جهودها لجلب طريقة جديدة للعيش المتكاملة إلى المملكة،
-              قامت روشن بتوسيع نطاقها في الرياض من خلال استحواذها على منطقة التسوق والأعمال روشن فرونت، الموجودة بالقرب من مشروع روشن الرئيسي،
-              سدرة. يتيح الاستحواذ لروشن أن تصبح مطورًا عقاريًا متعدد الأصول ومديرًا لعقارات عالمية المستوى.
-              تجربة حضرية استثنائية تعيد تصور كيف نعمل ونلعب ونتناول الطعام ونتسوق ونتشارك الفضاء في شمال الرياض. من خلال تكامل التصميم الموجه نحو الإنسان والمساحات الاجتماعية، لا تعتبر روشن فرونت مجرد مكان - إنها محور حي للاتصال والفضول والابتكار.
+            <p>As a part of its efforts to bring a new way of integrated living to the Kingdom,
+              ROSHN has expanded its footprint in Riyadh by acquiring the ROSHN Front shopping and business area, located adjacent to ROSHN’s flagship development,
+              SEDRA. The acquisition enables ROSHN to become a multi-asset class real estate developer and manager of global significance.
+              An extraordinary urban experience that reimagines how we work, play, dine, shop,
+              and share space in the north of Riyadh. Integrating human-centered design and social spaces, ROSHN Front isn't just a place - it's a living hub of connection, curiosity and innovation.
             </p>
           </div>
         </div>
@@ -290,93 +294,91 @@
       <!-- Icons -->
       <div class="icons">
         <div class="emailcon">
-        <img src="/IMAGES/email.svg" alt="رمز البريد الإلكتروني" width="50px">
+        <img src="/IMAGES/email.svg" alt="Email Icon" width="50px">
         <span>RiyadhGuidline@gov.sa</span>
       </div>
       <div class="emailcon">
-        <img src="/IMAGES/Tele.svg" alt="رمز الهاتف" width="50px">
+        <img src="/IMAGES/Tele.svg" alt="Telephone Icon" width="50px">
         <span>+966 11 123 4567</span>
       </div>
       </div>
       <!-- Advising Form -->
-        <div class="
-        test">
-        <div id="left" class="else">
-          <div class="formBorder">
-            <h1>للتوجيه الفردي</h1>
-            <div class="form">
-              <form>
-                <div class="namediv">
-                    <input placeholder="الاسم الأول" type="text" required>
-                    <input class="left" placeholder="الاسم الأخير" type="text" required>
+        <div class="test">
+          <div id="left" class="else">
+            <div class="formBorder">
+              <h1>For individual Advising</h1>
+              <div class="form">
+                <form>
+                  <input placeholder="FirstName" type="text" required>
+                  <input class="left" placeholder="LastName" type="text" required>
+                  <input class="btm" placeholder="Email" type="email" required>
+                  <input class="btm" id="btm1" placeholder="Phone" type="tel" required>
+                <div class="msgCon">
+                  <input placeholder="Additional Massage" id="msg" type="text">
                 </div>
-                <div class="emaildiv">
-                    <input class="btm" placeholder="البريد الإلكتروني" type="email" required>
-                    <input class="btm" id="btm1" placeholder="الهاتف" type="tel" required>
+                <div class="submitdiv">
+                  <input class="submit" type="submit" value="Submit">
                 </div>
-              <div class="msgCon">
-                <input placeholder="رسالة إضافية" id="msg" type="text">
+                </form>
               </div>
-              <div class="submitdiv">
-                <input class="submit" type="submit" value="إرسال">
-              </div>
-              </form>
             </div>
           </div>
+          <!-- Footer Content -->
+        <div id="right" class="else">
+          <div class="aboutFooter">
+            <a href="##">
+              <h3>About</h3>
+            </a>
+            <a href="##">
+              <p>Our Story</p>
+            </a>
+            <a href="##">
+              <p>Awards</p>
+            </a>
+            <a href="##">
+              <p>Our Team</p>
+            </a>
+            <a href="##">
+              <p>Career</p>
+            </a>
+          </div>
+          <div class="aboutFooter">
+            <a href="##">
+              <h3>Company</h3>
+            </a>
+            <a href="##">
+              <p>Our Services</p>
+            </a>
+            <a href="##">
+              <p>Clients</p>
+            </a>
+            <a href="##">
+              <p>Contact</p>
+            </a>
+            <a href="##">
+              <p>Press</p>
+            </a>
+          </div>
+          <div class="aboutFooter">
+            <a href="##">
+              <h3>Resources</h3>
+            </a>
+            <a href="#Main">
+              <p>Home</p>
+            </a>
+            <a href="/HTML/Packages(English).html">
+              <p>Packages</p>
+            </a>
+            <a href="##">
+              <p>Privacy Policy</p>
+            </a>
+            <a href="##">
+              <p>Career</p>
+            </a>
+          </div>
         </div>
-        <!-- Footer Content -->
-      <div id="right" class="else">
-        <div class="aboutFooter">
-          <a href="##">
-            <h3>حول</h3>
-          </a>
-          <a href="##">
-            <p>قصتنا</p>
-          </a>
-          <a href="##">
-            <p>الجوائز</p>
-          </a>
-          <a href="##">
-            <p>فريقنا</p>
-          </a>
-          <a href="##">
-            <p>الوظائف</p>
-          </a>
         </div>
-        <div class="aboutFooter">
-          <a href="##">
-            <h3>الشركة</h3>
-          </a>
-          <a href="##">
-            <p>خدماتنا</p>
-          </a>
-          <a href="##">
-            <p>العملاء</p>
-          </a>
-          <a href="##">
-            <p>اتصال</p>
-          </a>
-          <a href="##">
-            <p>الصحافة</p>
-          </a>
-        </div>
-        <div class="aboutFooter">
-          <a href="##">
-            <h3>الموارد</h3>
-          </a>
-          <a href="#Main">
-            <p>الرئيسية</p>
-          </a>
-          <a href="##">
-            <p>النشرة الإخبارية</p>
-          </a>
-          <a href="##">
-            <p>سياسة الخصوصية</p>
-          </a>
-        </div>
-      </div>
-      </div>
-      <p class="copyright">&copy; جميع الحقوق محفوظه لمؤسسة دليل موسم الرياض 2024</p>
-  </footer>
-</body>
+        <p class="copyright">&copy; All rights reserved to Riyadh Season GuideLine Oraganization</p>
+    </footer>
+  </body>
 </html>
