--- a/Project/Html/Home(Arabic).html
+++ b/Project/Html/Home(Arabic).html
@@ -282,7 +282,7 @@
       <div class="icons">
         <div class="emailcon">
           <img src="/IMAGES/email.svg" alt="رمز البريد الإلكتروني" width="50px">
-          <span>RiyadhGuidline@gov.sa</span>
+          <span>RiyadhGuideline@gov.sa</span>
         </div>
         <div class="emailcon">
           <img src="/IMAGES/Tele.svg" alt="رمز الهاتف" width="50px">
@@ -345,7 +345,7 @@
               <p>العملاء</p>
             </a>
             <a href="##">
-              <p>اتصال</p>
+              <p>التواصل</p>
             </a>
             <a href="##">
               <p>الصحافة</p>
