--- a/Project/Html/Packages(Arabic).html
+++ b/Project/Html/Packages(Arabic).html
@@ -215,7 +215,7 @@
     </section>
 
     <!-- Cards Section Two -->
-    <section class="cards_con">
+    <html class="cards_con">
       <!-- Header -->
       <div class="headerBorder">
         <div class="header_con">
@@ -295,7 +295,7 @@
       </section>
 
       <!-- Cards Section three -->
-      <section class="cards_con">
+      <body class="cards_con">
         <!-- Header -->
         <div class="headerBorder">
           <div class="header_con">
@@ -469,7 +469,7 @@
                   <p>العملاء</p>
                 </a>
                 <a href="##">
-                  <p>اتصال</p>
+                  <p>التواصل</p>
                 </a>
                 <a href="##">
                   <p>الصحافة</p>
@@ -493,3 +493,5 @@
           </div>
           <p class="copyright">&copy; جميع الحقوق محفوظه لمؤسسة دليل موسم الرياض 2024</p>
         </footer>
+      </body>
+    </html>
