--- a/Project/Html/Home(English).html
+++ b/Project/Html/Home(English).html
@@ -362,7 +362,7 @@
               <p>Privacy Policy</p>
             </a>
             <a href="##">
-              <p>Career</p>
+              <p>Blog</p>
             </a>
           </div>
         </div>
