--- a/Project/Html/Packages(English).html
+++ b/Project/Html/Packages(English).html
@@ -64,16 +64,7 @@
       <h1 id="header1" class="header">Have Your Best</h1>
       <h1 id="header2" class="header">Times In Riyadh</h1>
     </div>
-    <!-- Heading Button -->
-    <!-- Button Container -->
-    <div class="btn_div">
-      <!-- Button -->
-      <button onclick="location.href='#about3'" class="btn">
-        <span>
-          <b>Explore -</b>
-        </span>
-      </button>
-    </div>
+
   </section>
   <section class="hr_con">
     <div class="hr"></div>
@@ -497,7 +488,7 @@
                   <p>Privacy Policy</p>
                 </a>
                 <a href="##">
-                  <p>Career</p>
+                  <p>Blog</p>
                 </a>
               </div>
             </div>
