--- a/Project/Html/Home(Arabic).html
+++ b/Project/Html/Home(Arabic).html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="/CSS/About.css" />
   <link rel="stylesheet" href="/CSS/Cards.css" />
   <link rel="stylesheet" href="/CSS/Footer.css">
-  <link rel="stylesheet" href="/CSS/NavBar(Arabic).css">
-  <link rel="stylesheet" href="/CSS/HomeArabic.css">
-  <link rel="stylesheet" href="/CSS/Footer(Arabic).css">
+  <link rel="stylesheet" href="/ArabicPagesCSS/NavBar(Arabic).css">
+  <link rel="stylesheet" href="/ArabicPagesCSS/Home(Arabic).css">
+  <link rel="stylesheet" href="/ArabicPagesCSS/Footer(Arabic).css">
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
   <!-- Icon -->
   <link rel="icon" href="/IMAGES/Logo4.png">
