--- a/Project/Html/Packages(Arabic).html
+++ b/Project/Html/Packages(Arabic).html
@@ -8,10 +8,10 @@
   <link rel="stylesheet" href="/CSS/NavBar.css">
   <link rel="stylesheet" href="/CSS/Cards.css">
   <link rel="stylesheet" href="/CSS/Footer.css">
-  <link rel="stylesheet" href="/CSS/NavBar(Arabic).css">
+  <link rel="stylesheet" href="/ArabicPagesCSS/NavBar(Arabic).css">
   <link rel="stylesheet" href="/CSS/Packages.css">
-  <link rel="stylesheet" href="/CSS/Packages(Arabic).css">
-  <link rel="stylesheet" href="/CSS/Footer(Arabic).css">
+  <link rel="stylesheet" href="/ArabicPagesCSS/Packages(Arabic).css">
+  <link rel="stylesheet" href="/ArabicPagesCSS/Footer(Arabic).css">
   <!-- Icon -->
   <link rel="icon" href="/IMAGES/Logo4.png">
 </head>
