--- a/Project/Html/Home(Arabic).html
+++ b/Project/Html/Home(Arabic).html
@@ -266,9 +266,7 @@
               قامت روشن بتوسيع نطاقها في الرياض من خلال استحواذها على منطقة التسوق والأعمال روشن فرونت، الموجودة بالقرب
               من مشروع روشن الرئيسي،
               سدرة. يتيح الاستحواذ لروشن أن تصبح مطورًا عقاريًا متعدد الأصول ومديرًا لعقارات عالمية المستوى.
-              تجربة حضرية استثنائية تعيد تصور كيف نعمل ونلعب ونتناول الطعام ونتسوق ونتشارك الفضاء في شمال الرياض. من
-              خلال تكامل التصميم الموجه نحو الإنسان والمساحات الاجتماعية، لا تعتبر روشن فرونت مجرد مكان - إنها محور حي
-              للاتصال والفضول والابتكار.
+              تجربة حضرية استثنائية تعيد تصور كيف نعمل ونلعب ونتناول الطعام ونتسوق ونتشارك الفضاء في شمال الرياض. 
             </p>
           </div>
         </div>
