--- a/Project/Html/Home(English).html
+++ b/Project/Html/Home(English).html
@@ -269,8 +269,7 @@
               SEDRA. The acquisition enables ROSHN to become a multi-asset class real estate developer and manager of
               global significance.
               An extraordinary urban experience that reimagines how we work, play, dine, shop,
-              and share space in the north of Riyadh. Integrating human-centered design and social spaces, ROSHN Front
-              isn't just a place - it's a living hub of connection, curiosity and innovation.
+              and share space in the north of Riyadh.
             </p>
           </div>
         </div>
